# my-machine-learning-tutorial

./: .pre-commit-config.yaml  .pylintrc  Readme.md  __init__.py  my_machine_learning.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
my_machine_learning/: __init__.py  my_machine_learning.py
