[tool.poetry]
name = "my-machine-learning"
version = "0.1.0"
description = "Tutorial from https://www.data-transitionnumerique.com/scikit-learn-python/."
authors = ["Mihamina Rakotovazaha"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
sklearn = "^0.0.post1"
numpy = "^1.23.5"
scipy = "^1.9.3"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
